--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ a:visited {
   overflow: hidden;
 }
 .container-sections .article-news {
-  margin: 20px 20px;
+  margin: 20px;
 }
 .container-sections .date {
   color: gray;
